# yolo-arcface-model-

./: README.md
face_recognition_demo/: CMakeLists.txt  build-linux_RK356X.sh
face_recognition_demo/include/: face.h  yolos.h
face_recognition_demo/model/: arcface_no_l2_int8.rknn
face_recognition_demo/src/: face.cc  main.cc  yolos.cc
